      error. (CNY-2422)
    * Perl requirements that are not present on the system or provided by the
      package being built are dropped. (CNY-2180)
    * Two expansion functions have been introduced to package recipes:
      r.glob and r.regexp. These functions return an object that can be
      substituted for any API parameter that calls for a string based
      regexp or glob. (CNY-2222)

Changes in 1.2.15:
  o Bug Fixes:
    * Moving an unmodified shadow to tip via cvc promote no longer causes
      an error. (CNY-2441)
    * Recipes using addSvnSnapshot no longer modify the conary
      configuration object's tmpDir setting (CNY-2401)
    * Fixed a rare bug in which dependency resolution would fail when
      a dependency that used to be provided by one installed package
      is now provided by two new packages. (CNY-2459)

  o Client Changes:
    * Conary will now use the proxy settings stored in its local
      configuration when loading remote configuration files. (CNY-2363)

  o Build Changes:
    * Policies that move files in destdir now track path changes they
      make so that files will end up in the correct package or component
      after being moved, when "package=" or "component=" has been used
      in a build action. (CNY-1679)

Changes in 1.2.14:
  o Client Changes:
    * The /etc/ld.so.conf.d/*.conf handling added to Conary 1.2.13
      introduced a bug that could erase necessary entries from
      ld.so.conf in some circumstances.  This bug has been
      resolved. (CNY-2440)

Changes in 1.2.13:
  o Client Changes:
    * Conary will not downgrade packages if no version is specified by
      the user, but, due to an out of date mirror or other reasons, the
      update available for a package is older than the currently
      installed package. (CNY-2402)
    * Conary now recognizes /etc/ld.so.conf.d/*.conf files, adding an
      include line to /etc/ld.so.conf if they exist, and does not add