@@ -539,6 +539,7 @@ _METADATA_ITEM_TAG_CATEGORIES = 6
 _METADATA_ITEM_TAG_BIBLIOGRAPHY = 7
 _METADATA_ITEM_TAG_SIGNATURES = 8
 _METADATA_ITEM_TAG_NOTES = 9
+_METADATA_ITEM_TAG_LANGUAGE = 10
 
 _METADATA_ITEM_SIG_VER_ALL = [ 0 ]
 
@@ -557,6 +558,8 @@ class MetadataItem(streams.StreamSet):
                 (DYNAMIC, OBSS,                   'crypto'       ),
         _METADATA_ITEM_TAG_URL:
                 (DYNAMIC, streams.StringStream,   'url'          ),
+        _METADATA_ITEM_TAG_LANGUAGE:
+                (DYNAMIC, streams.StringStream,   'language'     ),
         _METADATA_ITEM_TAG_CATEGORIES:
                 (DYNAMIC, OBSS,                   'categories'   ),
         _METADATA_ITEM_TAG_BIBLIOGRAPHY:
@@ -639,11 +642,36 @@ class Metadata(streams.OrderedStreamCollection):
         for item in self.getStreams(1):
             yield item
 
-    def get(self, lang):
+    def get(self, language=None):
         d = dict.fromkeys(MetadataItem._keys)
         for item in self.getStreams(1):
-            d.update(item)
+            if not item.language():
+                d.update(item)
+        if language is not None:
+            for item in self.getStreams(1):
+                if item.language() == language:
+                    d.update(item)
         return d
+
+    def flatten(self, skipSet=None):
+        if skipSet is None:
+            skipSet = []
+        items = {}
+        keys = MetadataItem._keys
+        for item in self.getStreams(1):
+            language = item.language()
+            if language not in items:
+                items[language] = MetadataItem()
+            newItem = items[language]
+            for key in item.keys():
+                if key in skipSet:
+                    continue
+                values = getattr(item, key)()
+                if not isinstance(values, (list, tuple)):
+                    values = [values]
+                for value in values:
+                    getattr(newItem, key).set(value)
+        return items.values()
 
     def verifyDigitalSignatures(self, serverName=None):
         missingKeys = []
@@ -944,7 +972,8 @@ class Trove(streams.StreamSet):
                   "idMap", "type", "redirects" ]
 
     def __repr__(self):
-        return "trove.Trove('%s', %s)" % (self.name(), repr(self.version()))
+        return "trove.Trove(%r, %r, %r)" % (self.name(), self.version(),
+                                            self.flavor())
 
     def _sigString(self, version):
         if version == _TROVESIG_VER_CLASSIC:
@@ -1168,8 +1197,17 @@ class Trove(streams.StreamSet):
     def getNameVersionFlavor(self):
         return self.name(), self.version(), self.flavor()
 
-    def getMetadata(self, lang=None):
-        return self.troveInfo.metadata.get(lang)
+    def getMetadata(self, language=None):
+        return self.troveInfo.metadata.get(language)
+
+    def getAllMetadataItems(self):
+        return self.troveInfo.metadata.flatten()
+
+    def copyMetadata(self, trv, skipSet=None):
+        items = trv.troveInfo.metadata.flatten(skipSet=skipSet)
+        self.troveInfo.metadata = Metadata()
+        for item in items:
+            self.troveInfo.metadata.addItem(item)
 
     def changeVersion(self, version):
         self.version.set(version)
