@@ -11,6 +11,10 @@ Changes in @NEW@:
       r.glob and r.regexp. These functions return an object that can be
       substituted for any API parameter that calls for a string based
       regexp or glob. (CNY-2222)
+    * Add code to display new-style metadata through rq, q, and showchangeset,
+      as well as propagate that metadata via cooking, promoting, shadowing,
+      and committing source packages.  Entering this metadata must still 
+      be done through scripts.  (CNY-1808)
 
 Changes in 1.2.15:
   o Bug Fixes:
